增加配置环境小程序
对于每一个OpenGL项目都需要配置项目属性，为了方便，写了个小程序来配置环境

--- a/00_config/00_config.vcproj
+++ b/00_config/00_config.vcproj
@@ -41,7 +41,7 @@
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				AdditionalIncludeDirectories="&quot;C:\Users\Administrator\Documents\Visual Studio 2008\Projects\OpenGL_lesson\include&quot;"
+				AdditionalIncludeDirectories="..\\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;GLEW_STATIC"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
@@ -63,7 +63,7 @@
 				Name="VCLinkerTool"
 				AdditionalDependencies="glfw3dll.lib opengl32.lib glu32.lib glew32s.lib"
 				LinkIncremental="2"
-				AdditionalLibraryDirectories="&quot;C:\Users\Administrator\Documents\Visual Studio 2008\Projects\OpenGL_lesson\lib&quot;"
+				AdditionalLibraryDirectories="..\\lib"
 				IgnoreDefaultLibraryNames="msvcrt"
 				GenerateDebugInformation="true"
 				SubSystem="1"
