--- a/03_Matrices/03_Matrices.vcproj
+++ b/03_Matrices/03_Matrices.vcproj
@@ -46,7 +46,7 @@
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
-				UsePrecompiledHeader="2"
+				UsePrecompiledHeader="0"
 				WarningLevel="3"
 				DebugInformationFormat="4"
 			/>
@@ -230,7 +230,15 @@
 				RelativePath=".\SingleColor.fragmentshader"
 				>
 			</File>
+			<File
+				RelativePath=".\VAO.md"
+				>
+			</File>
 		</Filter>
+		<File
+			RelativePath=".\OpenGL GLSL.md"
+			>
+		</File>
 		<File
 			RelativePath=".\ReadMe.md"
 			>
