--- a/03_Matrices/03_Matrices.vcproj
+++ b/03_Matrices/03_Matrices.vcproj
@@ -43,6 +43,7 @@
 				Optimization="0"
 				AdditionalIncludeDirectories="..\include"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;GLEW_STATIC"
+				StringPooling="false"
 				MinimalRebuild="true"
 				BasicRuntimeChecks="3"
 				RuntimeLibrary="3"
